public interface DataStorage {
    String read();
    int write(String data);
}
