public class EncodingModule {
    private DataStorage fileDataStorage;
    private DataStorage networkDataStorage;

    public EncodingModule(DataStorage fileDataStorage, DataStorage networkDataStorage) {
        this.fileDataStorage = fileDataStorage;
        this.networkDataStorage = networkDataStorage;
    }

    public void encodeWithFiles() {
        String data = fileDataStorage.read();
        // Implementation for encoding data using file-based storage
        fileDataStorage.write(encodedData);
    }

    public void encodeBasedOnNetworkAndDatabase() {
        String data = networkDataStorage.read();
        // Implementation for encoding data using network-based storage
        networkDataStorage.write(encodedData);
    }
}
