public class FileDataStorage implements DataStorage {
    public String read() {
        // Implementation for reading data from a file
    }

    public int write(String data) {
        // Implementation for writing data to a file
    }
}
