public class NetworkDataStorage implements DataStorage {
    public String read() {
        // Implementation for reading data from a network source
    }

    public int write(String data) {
        // Implementation for writing data to a network source
    }
}
